@@ -55,6 +55,17 @@ namespace SEQAN_NAMESPACE_MAIN
 ..see:Spec.Bfs Iterator
 ..see:Spec.Dfs Preorder Iterator
 ..include:seqan/graph_types.h
+
+.Memfunc.Edge Iterator#Iter
+..summary:Constructor
+..class:Spec.Edge Iterator
+..signature:Iter()
+..signature:Iter(graph)
+..signature:Iter(iter)
+..param.graph:The graph to iterate edges of.
+...type:Class.Graph
+..param.iter:Other iterator to copy-construct from.
+...type:Spec.Edge Iterator
 */
 
 template<typename TGraph, typename TSpec>
