@@ -55,6 +55,19 @@ namespace SEQAN_NAMESPACE_MAIN
 ..see:Spec.Bfs Iterator
 ..see:Spec.Dfs Preorder Iterator
 ..include:seqan/graph_types.h
+
+.Memfunc.Out-Edge Iterator#Iter
+..summary:Constructor
+..class:Spec.Out-Edge Iterator
+..signature:Iter()
+..signature:Iter(graph, v)
+..signature:Iter(iter)
+..param.graph:The graph to iterate edges of.
+...type:Class.Graph
+..param.v:Vertex descriptor of vertex to iterate out-edges from.
+...type:Metafunction.VertexDescriptor
+..param.iter:Other iterator to copy-construct from.
+...type:Spec.Out-Edge Iterator
 */
 
 
